[tool.poetry]
name = "chart"
version = "0.1.0"
description = ""
authors = ["Zachary Tessler <ztessler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
jupyterlab = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
